--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,17 @@ body {
     background-size: cover;
     background-attachment: fixed; /* Keeps the background fixed */
 }
-
 .tabs-container {
     display: flex;
     align-items: center; /* Centraliza verticalmente */
+    justify-content: center; /* Centraliza o conteúdo horizontalmente */
     background-color: rgba(255, 255, 255, 0.9);
     position: sticky;
     top: 0;
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 10px; /* Adiciona padding em volta */
+    padding: 10px;
+    gap: 20px; /* Espaçamento entre o botão e as tabs */
 }
 
 .music-button {
@@ -28,14 +29,12 @@ body {
     border: none;
     color: #c0392b; /* Christmas red */
     font-size: 1.2em;
-    margin-right: 20px; /* Espaço entre o botão e as tabs */
     cursor: pointer;
 }
 
 .tabs {
     display: flex;
-    justify-content: center;
-    flex-grow: 1; /* Centraliza as tabs */
+    gap: 10px; /* Espaçamento entre os botões */
 }
 
 .tab-button {
@@ -43,7 +42,6 @@ body {
     border: 2px solid #d35400;
     color: white;
     transition: transform 0.3s, background-color 0.3s;
-    margin: 0 10px;
 }
 
 .tab-button.active {
