--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,11 @@ body {
     color: #912419;
 }
 
+.music-button:hover {
+    font-size: 1.5em !important;
+    color: #912419 !important;
+}
+
 .tabs {
     display: flex;
     gap: 10px; /* Espaçamento entre os botões */
