--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     color: #c0392b; /* Christmas red */
     font-size: 1.2em;
     cursor: pointer;
+    padding-left: 1rem;
 }
 
 .music-button:hover {
